opam-version: "1.2"
version: "1.0"
maintainer: "zachshipko@gmail.com"
authors: ["Zach Shipko"]
homepage: "https://github.com/zshipko/ocaml-vec"
bug-reports: "https://github.com/zshipko/ocaml-vec/issues"
dev-repo: "https://github.com/zshipko/ocaml-vec.git"
license: "ISC"
build: [
    ["cargo" "build" "--release"]
    ["jbuilder" "build"]
]
