(include_subdirs unqualified)

(rule
 (deps
  (source_tree ..))
 (targets libvec_stubs.a dllvec_stubs.so)
 (action
  (progn
   (run cargo clean)
   (run cargo build --offline --target-dir /tmp/ocaml-rs --release)
   (run sh -c
     "mv /tmp/ocaml-rs/release/libvec_stubs.so ./dllvec_stubs.so || mv /tmp/ocaml-rs/release/libvec_stubs.dylib ./dllvec_stubs.so")
   (run mv /tmp/ocaml-rs/release/libvec_stubs.a libvec_stubs.a))))

(library
 (name vec)
 (public_name vec)
 (foreign_archives vec_stubs)
 (c_library_flags
  (-lpthread -lc -lm)))
